--- a/index.html
+++ b/index.html
@@ -2502,6 +2502,11 @@
 
 
 
+<a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+        data-filename="/publication/gardensoil/cite.bib">
+  Cite
+</a>
+
 
 
 
@@ -2710,6 +2715,11 @@
 
 
 
+
+<a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+        data-filename="/publication/gardensoil/cite.bib">
+  Cite
+</a>
 
 
 
