--- a/publication/gardensoil/index.html
+++ b/publication/gardensoil/index.html
@@ -897,6 +897,11 @@
 
 
 
+<a href="#" class="btn btn-outline-primary btn-page-header js-cite-modal"
+        data-filename="/publication/gardensoil/cite.bib">
+  Cite
+</a>
+
 
 
 
