--- a/publication/index.html
+++ b/publication/index.html
@@ -881,6 +881,11 @@
 
 
 
+<a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+        data-filename="/publication/gardensoil/cite.bib">
+  Cite
+</a>
+
 
 
 
