--- a/publication/index.html
+++ b/publication/index.html
@@ -862,7 +862,7 @@
       Kenneth Frost</span>
   </span>
   (2022).
-  <a href="/publication/mcm/">Characterization of the Soil Bacterial Community from Selected Boxwood Gardens across the United States</a>.
+  <a href="/publication/mcm/">Legacy effects of fumigation on soil bacterial and fungal communities and their response to metam sodium application</a>.
   In <em>Environ. microbiome</em>.
   
   <p>
