fixed bad format in YAML

--- a/publication/gardensoil/index.html
+++ b/publication/gardensoil/index.html
@@ -1000,7 +1000,7 @@ Supplementary notes can be added here, including [code, math, and images](https:
   
   <a class="badge badge-light" href="/tag/urban-garden/">urban garden</a>
   
-  <a class="badge badge-light" href="/tag/boxwood/">boxwood</a>
+  <a class="badge badge-light" href="/tag/boxwood/">Boxwood</a>
   
   <a class="badge badge-light" href="/tag/biological-control-agents/">biological control agents</a>
   
